frontend/test/should_pass/basic_model_400.gm
node class AA extends A;

node class A;

edge class BB extends B;

edge class B;