frontend/test/should_fail/inh_model_002.gm
node class A extends B;
node class B extends A;
